NotVerifiedCounterExamples/JMLFaleNegatives/Overflow/ArjaE/Perimeter/bug3/Repaired/counterexamples.txt
/home/marloncalvo/workspace/buggyjavajml/NotVerifiedCounterExamples/JMLFaleNegatives/Overflow/ArjaE/Perimeter/bug3/Repaired/PerimeterDriver.java:30: error: cannot find symbol
		Perimeter p = new Perimeter();
		^
  symbol:   class Perimeter
  location: class PerimeterDriver
/home/marloncalvo/workspace/buggyjavajml/NotVerifiedCounterExamples/JMLFaleNegatives/Overflow/ArjaE/Perimeter/bug3/Repaired/PerimeterDriver.java:30: error: cannot find symbol
		Perimeter p = new Perimeter();
		                  ^
  symbol:   class Perimeter
  location: class PerimeterDriver
2 errors
